force-app/main/default/objects/ETT_Job_Card_Close__c/ETT_Job_Card_Close__c.object-meta.xml
<CustomObject>
    <label>Job Card Close</label>
    <nameField>
        <displayFormat>JCC-{000000}</displayFormat>
        <label>Job Card Close Ref. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Card Close</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>