force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date__c</fullName>
    <formula>Collection_Card__r.ETT_Collection_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>