force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Dno__c.field-meta.xml
<CustomField>
    <fullName>Dno__c</fullName>
    <label>Dno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>