force-app/main/default/objects/ETT_Job_Card_Close__c/fields/EBS_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>EBS_Ref_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBS Ref No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>