force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>Error_Msg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Msg</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>