force-app/main/default/objects/ETT_Job_Card_Close__c/fields/JV_EBS_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>JV_EBS_Ref_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JV EBS Ref No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>