force-app/main/default/objects/ETT_Job_Card_Close__c/fields/JV_Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>JV_Error_Msg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JV Error Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>