force-app/main/default/objects/ETT_Job_Card_Close__c/fields/JV_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>JV_Request_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JV Request Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>