force-app/main/default/objects/ETT_Job_Card_Close__c/fields/LI__c.field-meta.xml
<CustomField>
    <fullName>LI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Load Index</inlineHelpText>
    <label>LI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>