force-app/main/default/objects/ETT_Job_Card_Close__c/fields/O_Pattern__c.field-meta.xml
<CustomField>
    <fullName>O_Pattern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Original Pattern</inlineHelpText>
    <label>O.Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>