force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>