force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Card Close</relationshipLabel>
    <relationshipName>Job_Card_Close</relationshipName>
    <type>Lookup</type>
</CustomField>