force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Party_Type__c</fullName>
    <formula>TEXT(Collection_Card__r.ETT_Accounts__r.Party_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Type</label>
    <type>Text</type>
</CustomField>