force-app/main/default/objects/ETT_Job_Card_Close__c/fields/PR__c.field-meta.xml
<CustomField>
    <fullName>PR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ply Rate</inlineHelpText>
    <label>PR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>