force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Production_Status__c.field-meta.xml
<CustomField>
    <fullName>Production_Status__c</fullName>
    <label>Production Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produced</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Send Back</fullName>
            </value>
            <value>
                <fullName>Scrapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>