force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>