force-app/main/default/objects/ETT_Job_Card_Close__c/fields/SI__c.field-meta.xml
<CustomField>
    <fullName>SI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Speed Index</inlineHelpText>
    <label>SI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>