force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Thread_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Thread_Pattern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Thread Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>