force-app/main/default/objects/ETT_Job_Card_Close__c/fields/ThreadPattern__c.field-meta.xml
<CustomField>
    <fullName>ThreadPattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ThreadPattern</label>
    <referenceTo>ETT_Tread_Master__c</referenceTo>
    <relationshipLabel>Job Card Close</relationshipLabel>
    <relationshipName>Job_Card_Close</relationshipName>
    <type>Lookup</type>
</CustomField>