force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>