force-app/main/default/objects/ETT_Job_Card_Close__c/fields/Tyre_Type__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Type__c</fullName>
    <formula>TEXT( Job_Card__r.Tyre_Inventory__r.Tyre_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Type</label>
    <type>Text</type>
</CustomField>